refactor: improve code formatting and organization in PasswordUtils and RolesUtils classes