@@ -1,13 +1,17 @@
 package com.cryfirock.auth.util;
 
+import java.util.List;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
+import org.springframework.stereotype.Component;
+
 import com.cryfirock.auth.entity.Role;
 import com.cryfirock.auth.entity.User;
 import com.cryfirock.auth.repository.JpaRoleRepository;
-import java.util.List;
-import java.util.stream.Stream;
+
 import lombok.Getter;
 import lombok.Setter;
-import org.springframework.stereotype.Component;
 
 @Component
 @Setter
@@ -22,11 +26,12 @@ public class RolesUtils {
   }
 
   public List<Role> assignRoles(User user) {
-    return (user.isAdmin() ? Stream.of(ROLE_USER, ROLE_ADMIN) : Stream.of(ROLE_USER))
-        .map(
-            role -> roleRepository
-                .findByName(role)
-                .orElseThrow(() -> new IllegalStateException("Missing role " + role)))
-        .toList();
+    return (user.isAdmin()
+        ? Stream.of(ROLE_USER, ROLE_ADMIN)
+        : Stream.of(ROLE_USER))
+        .map(role -> roleRepository
+            .findByName(role)
+            .orElseThrow(() -> new IllegalStateException("Missing role " + role)))
+        .collect(Collectors.toList());
   }
 }
